--- a/webapp/src/app/mflg/productA/CCB_Page.html
+++ b/webapp/src/app/mflg/productA/CCB_Page.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Perspective Scrolling in CSS | Nothing4us</title>
+  <title>Beach Bazaar Page</title>
   <link rel="stylesheet" href="./CCB_Page.css">
 
 </head>
