update to sliding bar

--- a/webapp/src/app/pricebar/pricebar.css
+++ b/webapp/src/app/pricebar/pricebar.css
@@ -24,6 +24,7 @@
     flex: 1; /* Each component takes equal space */
     width: 100%;
     /* margin-right: 20px; Add some spacing between components */
+    background-color: white;
 }
 
 
