--- a/webapp/src/app/authorised/home/styles.modules.css
+++ b/webapp/src/app/authorised/home/styles.modules.css
@@ -1,11 +1,13 @@
 .home-page {
-    background-color: #eee;
+    background-color: #ffffff;
     width: 100vw;
     height: 100vh;
   }
   
 .search-bar-container {
-    padding-top: 5vh;
+    padding-top: 3vh;
+    padding-bottom: 3vh;
+    padding-left: 1vh;
     /* width: 40%; */
     /* margin: auto; */
     /* display: flex;
@@ -14,15 +16,28 @@
     }
 
 .alert-dashboard {
-      display: flex;
-      flex-direction: column;
-  }
-  
-.product-list-container, .price-bar-container, .alert-list-container {
-    flex: 1;
+    display: flex;
+    flex-direction: column;
     border: 1px solid #ccc;
+}
+  
+.product-list-container{
+    width: 30%;
+    border: 1px;
+    padding: 0px;
+    margin: 5px;
+}
+.price-bar-container{
+    width: 50%;
+    border: 1px;
     padding: 10px;
     margin: 5px;
+}
+.alert-list-container {
+    width: 30%;
+    border: 1px;
+    padding: 0px;
+    margin: 0px;
 }
 
 @media (min-width: 768px) {
