--- a/webapp/src/app/authorised/home/components/product_list.css
+++ b/webapp/src/app/authorised/home/components/product_list.css
@@ -3,7 +3,7 @@
     background-color: white;
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 0px 8px #ddd;
-    border-radius: 10px;
+    /* box-shadow: 0px 0px 8px #ddd; */
+    /* border-radius: 10px; */
     margin-top: 0rem;
 }
