--- a/webapp/src/app/authorised/home/styles.modules.css
+++ b/webapp/src/app/authorised/home/styles.modules.css
@@ -8,16 +8,23 @@
     padding-left: 1vh;
 }
 
-.search-bar-container {
+.search-and-summary-container {
+    display: flex;
+    justify-content: space-between; 
     padding-top: 3vh;
     padding-bottom: 3vh;
     padding-left: 1vh;
-    /* width: 40%; */
+}
+.search-bar-container {
+    width: 60%;
     /* margin: auto; */
     /* display: flex;
     flex-direction: column; */
     /* min-width: 300px; */
-    }
+}
+.overview-container {
+    width: 30%;
+}
 
 .alert-dashboard {
     display: flex;
