--- a/webapp/src/app/authorised/home/components/alert.css
+++ b/webapp/src/app/authorised/home/components/alert.css
@@ -4,7 +4,7 @@
 display: flex;
 width: 100%;
 height: 100%;
-justify-content: center; 
+justify-content: flex-start; 
 align-items: center;
 /* box-shadow: 0px 0px 8px #a4a2a2; */
 /* opacity: 0.8; */
