Added links for similar products

--- a/webapp/src/app/(authenticated)/mflg/style.css
+++ b/webapp/src/app/(authenticated)/mflg/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
   box-shadow: 0 3px 10px rgba(0,0,0,0.3);
@@ -107,6 +107,10 @@ main {
   z-index: 5;
   user-select: none;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   & .btn {
     background-color: rgba(255,255,255,0.5);
     color: rgba(0,0,0,0.7);
@@ -155,3 +159,4 @@ main {
     &:nth-child(6) { left: calc(50% + 420px); opacity: 0; }
   }
 }
+
