--- a/webapp/src/app/globals.css
+++ b/webapp/src/app/globals.css
@@ -2,10 +2,12 @@
     background-color: #fff; 
     color: black; 
     display: flex;
+    flex: 0;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
 }
+
 
 .left {
     display: flex;
