--- a/webapp/src/app/(authenticated)/pricebar-component/pricebar.css
+++ b/webapp/src/app/(authenticated)/pricebar-component/pricebar.css
@@ -7,9 +7,9 @@
 } */
 .container {
     width: 100%;
-    max-width: 800px; /* Adjust the maximum width as needed */
-    margin: 0 auto; /* Center the container horizontally */
-    padding: 20px;
+    /* max-width: 800px;  */
+    margin: 0 auto;
+    /* padding: 20px; */
     justify-content: center;
 }
 
@@ -29,8 +29,8 @@
 
 
 .boxplot-container {
-    border: 2px solid black; /* Add border styling */
-    padding: 10px; /* Add padding to create space around the boxplot */
+    /* border: 2px solid black; Add border styling */
+    /* padding: 10px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,6 +61,9 @@ button:hover {
     align-items: center;
 }
 .slider-button-container > * {
-    margin-right: 10px; /* Adjust the margin as needed */
+    margin-right: 10px;
 }
 
+.slider-button-container > * {
+    margin-left: 10px;
+}
