--- a/webapp/src/app/(authenticated)/home/components/product_list.css
+++ b/webapp/src/app/(authenticated)/home/components/product_list.css
@@ -1,9 +1,11 @@
 .search-bar-results{
     width: 100%;
+    height: 100%;
     background-color: white;
     display: flex;
     flex-direction: column;
     /* box-shadow: 0px 0px 8px #ddd; */
     /* border-radius: 10px; */
     margin-top: 0rem;
+    justify-content: center; 
 }
