--- a/webapp/src/app/(authenticated)/home/components/product_list.css
+++ b/webapp/src/app/(authenticated)/home/components/product_list.css
@@ -7,5 +7,6 @@
     /* box-shadow: 0px 0px 8px #ddd; */
     /* border-radius: 10px; */
     margin-top: 0rem;
+    margin-left: 1rem;
     justify-content: center; 
 }
