--- a/webapp/src/app/(authenticated)/home/components/alert.css
+++ b/webapp/src/app/(authenticated)/home/components/alert.css
@@ -16,9 +16,7 @@ display: flex;
 .alert-text {
 /* color: white; */
 font-size: 1.5rem;
-text-align: center; 
-display: flex; 
-justify-content: center; 
-align-items: center;
+/* text-align: center;  */
+/* display: flex;  */
 /* text-shadow: 0 0 5px #d2d0d0, 0 0 5px #ffffff */
 }
