products page layout fix

--- a/webapp/src/app/(authenticated)/pricebar-component/pricebar.css
+++ b/webapp/src/app/(authenticated)/pricebar-component/pricebar.css
@@ -31,7 +31,7 @@
     /* border: 2px solid black; Add border styling */
     /* padding: 10px; */
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: white;
 }
