handle borders outside page, mock data, remove punctuation

--- a/webapp/src/app/(authenticated)/home/styles.modules.css
+++ b/webapp/src/app/(authenticated)/home/styles.modules.css
@@ -2,8 +2,9 @@
     background-color: #ffffff;
     width: 100vw;
     height: 100vh;
-    padding-left: 5vh;
-    padding-right: 5vh;
+    padding-left: 30vh;
+    padding-right: 30vh;
+    padding-bottom: 20vh;
   }
 
 .introduction-container {
