fix searh bar formatting, del redundant stuff

--- a/webapp/src/app/(authenticated)/home/styles.modules.css
+++ b/webapp/src/app/(authenticated)/home/styles.modules.css
@@ -11,19 +11,21 @@
     padding-left: 1vh;
 }
 
-.search-and-summary-container {
+/* .search-and-summary-container {
     display: flex;
     justify-content: space-between; 
     padding-top: 3vh;
     padding-bottom: 3vh;
     padding-left: 1vh;
-}
+} */
 .search-bar-container {
-    width: 60%;
-    /* margin: auto; */
-    /* display: flex;
-    flex-direction: column; */
-    /* min-width: 300px; */
+    width: 100%;
+    margin: auto; 
+    display: flex;
+    flex-direction: column; 
+    min-width: 300px;
+    padding-left: 1vh;
+    padding-bottom: 3vh;
 }
 .overview-container {
     width: 30%;
