--- a/webapp/src/app/(authenticated)/mflg/[productId]/styles.css
+++ b/webapp/src/app/(authenticated)/mflg/[productId]/styles.css
@@ -1,3 +1,9 @@
 .list-group-item-action.link-primary:hover {
     text-decoration: underline;
 }
+
+.description-container {
+    max-height: 150px; 
+    overflow-y: auto;
+    text-align: justify;
+}
